# job-apply-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
apply_engine/: __init__.py  __main__.py  _entry.py  answer_gen.py  applicant_profile.example.json  ats_detect.py  backfill_uploaded_docs.py  bench.py  browser.py  capabilities.example.md  capabilities.md  captcha.py  choice_gen.py  cli.py  completeness.py  compliance.py  config.py  conftest.py  converge.py  converge_lock.py  converge_watchdog.py  dedash.py  disclosure_guard.py  draft_audit.py  email_verify.py  field_map.py  filemutex.py  finish.py  finish_cli.py  form_audit.py  form_driver_stage.py  form_spec.py  halt_classifier.py  iterate_fix.py  linkedin.py  liveness.py  llm.py  narrative.example.md  notify.py  office_commitment.py  (+22 more)
apply_engine/adapters/: ashby.py  base.py  generic.py  greenhouse.py  lever.py  workday.py
apply_engine/builder/: __init__.py  cli.py  generate.py  render.py
apply_engine/engage/: __init__.py  cli.py  contact_hygiene.py  crm_util.py  runner.py  warm_path.py
apply_engine/qualify/: __init__.py  cli.py  enrichment.py  jd_fetch.py  qualify.py  resolve_url.py
apply_engine/skills/: README.md  _goldens.json  fill-form.md  fit-score.md  recon-lean.md  recon.md
apply_engine/source/: __init__.py  cli.py  feeds.py
apply_engine/tests/: conftest.py  test_answer_gen.py  test_apply_own_fix_iterate.py  test_ashby_adapter.py  test_ashby_modern.py  test_ats_detect.py  test_backfill_uploaded_docs.py  test_bench.py  test_build_skills.py  test_builder.py  test_button_yesno.py  test_calibration_recheck.py  test_captcha.py  test_capture.py  test_choice_gen.py  test_cli_chain_audit.py  test_cli_hooks.py  test_cli_liveness_preflight.py  test_cli_status.py  test_cli_tailoring.py  test_completeness.py  test_compliance.py  test_content_edit_audit.py  test_dedash.py  (+86 more)
examples/: README.md  contacts.example.json  engage_config.example.json  fit_rubric.example.md  holding.example.json  jobs.sample.json  profile.example.json  watchlist.example.json
(+34 files in other folders)
