[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-apply-engine"
version = "0.1.0"
description = "Stage-to-brink job-application automation + profile-driven resume/cover generator. Drafts with an LLM, decides with deterministic gates, and never clicks submit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sam Rivera" }]
keywords = ["job-search", "ats", "automation", "playwright", "resume", "cover-letter"]
dependencies = [
    "playwright>=1.49",
    "anthropic",
    "pymupdf",
    "python-pptx",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov"]

[project.scripts]
apply-engine = "apply_engine.cli:main"

[tool.setuptools.packages.find]
include = ["apply_engine*"]
exclude = ["apply_engine.tests*"]
