[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "career-engine"
version = "0.1.0"
description = "Multi-agent job-search engine: scout postings, build tailored resume/cover, and stage applications to the submit brink. Drafts with an LLM, decides with deterministic gates, and never clicks submit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jordan Bradshaw", email = "jobradshaw98@gmail.com" }]
keywords = ["job-search", "ats", "automation", "playwright", "resume", "cover-letter", "sourcing"]
dependencies = [
    "playwright>=1.49",
    "anthropic",
    "pymupdf",
    "python-pptx",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov"]

[project.scripts]
career-engine = "apply_engine._entry:main"
apply-engine = "apply_engine._entry:main"   # legacy alias

[tool.setuptools.packages.find]
include = ["apply_engine*"]
exclude = ["apply_engine.tests*"]

[tool.setuptools.package-data]
apply_engine = ["builder/templates/*.html"]
